# mtgpl

./: .gitignore  00_helpers.txt  10E.rst  2ED.rst  2X2.rst  2XM.rst  3ED.rst  40K.rst  4ED.rst  5DN.rst  5ED.rst  6ED.rst  7ED.rst  8ED.rst  9ED.rst  A25.rst  AER.rst  AFC.rst  AFR.rst  AKH.rst  AKR.rst  ALA.rst  ALL.rst  ANB.rst  APC.rst  ARB.rst  ARN.rst  ATQ.rst  AVR.rst  BBD.rst  BFZ.rst  BNG.rst  BNG_horde.rst  BOK.rst  BRC.rst  BRO.rst  BRR.rst  C13.rst  C14.rst  C15.rst  (+187 more)
MTG/: DGM.pot  GTC.pot  M14.pot  THS.rst
MTG/pl/: AVR.po  BNG.po  C13.po  DGM.po  FRF.po  GTC.po  ISD.po  JOU.po  KTK.po  M14.po  M15.po  NPH.po  RTR.po  THS.po  THS_heroes.po  THS_hydra.po
MTG/templates/: 10E.pot  2ED.pot  2X2.pot  2XM.pot  3ED.pot  40K.pot  4ED.pot  5DN.pot  5ED.pot  6ED.pot  7ED.pot  8ED.pot  9ED.pot  A25.pot  AER.pot  AFC.pot  AFR.pot  AKH.pot  AKR.pot  ALA.pot  ALL.pot  ANB.pot  APC.pot  ARB.pot  ARN.pot  ATQ.pot  AVR.pot  BBD.pot  BFZ.pot  BNG.pot  BNG_horde.pot  BOK.pot  BRC.pot  BRO.pot  BRR.pot  C13.pot  C14.pot  C15.pot  C16.pot  C17.pot  (+183 more)
MTGA/t/: MTGA_1.13Events.pot  MTGA_AbilityHanger.pot  MTGA_Binary.pot  MTGA_Decks.pot  MTGA_DuelScene.pot  MTGA_Enum.pot  MTGA_Events.pot  MTGA_Internal.pot  MTGA_MainNav_BattlePass.pot  MTGA_MainNav_Carousel.pot  MTGA_MainNav_Deck.pot  MTGA_MainNav_Profile.pot  MTGA_MainNav_Store.pot  MTGA_NPE.pot  (+4 more)
_archives/: M14_Rulebook.rst
_ext/: mtgcard.py
_static/: mtg_styles.css  prototype.js  tooltip.css  wizards_1.js
_templates/: layout.html
deploy/: container_start.sh  gunicorn.conf  webapp.nginxconf
docs/: .buildinfo  10E.html  2ED.html  2X2.html  2XM.html  3ED.html  40K.html  4ED.html  5DN.html  5ED.html  6ED.html  7ED.html  8ED.html  9ED.html  A25.html  AER.html  AFC.html  AFR.html  AKH.html  AKR.html  ALA.html  ALL.html  ANB.html  APC.html  ARB.html  ARN.html  ATQ.html  AVR.html  BBD.html  BFZ.html  BNG.html  BNG_horde.html  BOK.html  BRC.html  BRO.html  BRR.html  C13.html  C14.html  C15.html  C16.html  (+185 more)
mtgpl/: manage.py
mtgsalvation/: THS.pot  gettheros.py  scrapy.cfg
python/: THS.pot  grab_theros.py  mtgdumpset.py  scrap.py
rules/: M14_Rulebook.rst  Makefile  conf.py  index.rst
toolbox/: autotranslate.py  dumper.py  mtg_vars.py
(+947 files in other folders)
