[tool.poetry]
name = "mtg_pl"
version = "2020.3.1"
description = "MTG po polsku"
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.23.0"
sphinx-rtd-theme = "^0.5.1"
polib = "^1.1.0"
python-decouple = "^3.4"
typer = "^0.3.2"
lark-parser = "^0.11.2"
pre-commit = "^2.11.1"
trio = "^0.18.0"
anyio = "^2.2.0"
httpx = "^0.17.1"
rich = "^9.13.0"
tqdm = "^4.59.0"
Scrapy = "^2.4.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.1.1"
sphinx = "^4.1"
ipython = "^7.20.0"
black = "^20.8b1"
isort = "^5.7.0"
ipdb = "^0.13.7"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
