[tool.poetry]
name = "mtg_pl"
version = "2020.3.1"
description = "MTG po polsku"
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]

[tool.poetry.dependencies]
python = "^3.10"
polib = "^1.1.1"
python-decouple = "^3.6"
typer = "^0.4.1"
lark-parser = "^0.12.0"
trio = "^0.20.0"
anyio = "^3.6.1"
httpx = "^0.23.0"
rich = "^12.4.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.4.0"
pre-commit = "^2.19.0"
black = "^22.3.0"
isort = "^5.10.1"
ipdb = "^0.13.9"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.masonry.api"
