[tool.poetry]
name = "mtg_pl"
version = "2020.3.1"
description = "MTG po polsku"
authors = ["Dominik Kozaczko <dominik@kozaczko.info>"]

[tool.poetry.dependencies]
python = "^3.10"
polib = "^1.1.1"
python-decouple = "^3.6"
typer = {version = "^0.6.1", extras = ["all"]}
lark-parser = "^0.12.0"
trio = "^0.20.0"
anyio = {version = "^3.6.1", extras = ["trio"]}
httpx = {version = "^0.23.0", extras = ["http2"]}
rich = "^12.4.4"
aiofiles = "^22.1.0"
pendulum = "^2.1.2"
appdirs = "^1.4.4"
orjson = "^3.8.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.4.0"
pre-commit = "^2.19.0"
black = "^22.3.0"
isort = "^5.10.1"
ipdb = "^0.13.9"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.masonry.api"
